--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         </div>
 
         <div class="home-image">
-            <img src="images/user.jpg" alt="">
+            <img src="images/tst.jpg" alt="">
         </div>
     </section>
 
